k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todolist
  labels:
    app.kubernetes.io/name: todolist
