k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-app
  namespace: todolist
spec:
  type: ClusterIP
  selector:
    app: todolist-app
  ports:
    - name: http
      port: 80
      targetPort: http
